kong-systems.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: apache-deployment 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: apache 
  template: 
    metadata: 
      labels: 
        app: apache 
    spec: 
      containers: 
      - name: apache-container 
        image: httpd:2.4 
        ports: 
        - containerPort: 80 
---
apiVersion: v1 
kind: Service 
metadata: 
  name: apache-service 
spec: 
  selector: 
    app: apache 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 80 
  type: ClusterIP 
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx-deployment 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: nginx 
  template: 
    metadata: 
      labels: 
        app: nginx 
    spec: 
      containers: 
      - name: nginx-container 
        image: nginx:latest 
        ports: 
        - containerPort: 80 
---
apiVersion: v1 
kind: Service 
metadata: 
  name: nginx-service 
spec: 
  selector: 
    app: nginx 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 80 
  type: ClusterIP
