ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    konghq.com/https-status-redirect-code: "301"
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "true"
    konghq.com/protocols: http,https
    konghq.com/http-forwarded: "preserve"
spec:
  tls:
    - hosts:
  ingressClassName: kong
  rules:
    - host: 
      http:
        paths:
          - path: /system/test
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: apache-service
                port:
                  number: 80
